manifests/infrastructure/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
    name: envoy-gateway
spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: homelab-gateway
    namespace: default
spec:
    gatewayClassName: envoy-gateway
    listeners:
        - name: http
          port: 80
          protocol: HTTP
